Added .gitignore files Added .nvmrc file Added basic service for Intempt SDK Updated Dockerfile Intempt configuration for the server Temporarily disabled notifications

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,42 +1,49 @@
-
-#Firebase env vars
+# Firebase env vars
 FIREBASE_DATABASE_URL=
 FIREBASE_PROJECT_ID=
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
 
-#user set auth secret
+# User set auth secret
 AUTH_SECRET=
 
-#Sentry
+# Sentry
 SENTRY_DSN=
 
-#Postgres credentials
+# Postgres credentials
 DB_PASSWORD=
 DB_USER=
 DB_HOST=
 DB_NAME=
 DB_PORT=
 
-#MongoDb uri
+# MongoDb URI
 MONGO_URI=
 
-#Mailtrap credentials
+# Mailtrap credentials
 MAIL_TRAP_USERNAME=
 MAIL_TRAP_PASSWORD=
 
-#Stripe Secret
+# Stripe Secret
 STRIPE_SECRET=
 STRIPE_WEBHOOK_SECRET=
 
-#Send in blue env vars, multiple listIds can be added
+# Send in blue env vars, multiple listIds can be added
 SendInBlue_API_KEY=
 SendInBlue_User=
 SendInBlue_Password=
 SendInBlue_ListId=
 
-#For transactional emails
+# For transactional emails
 PRODUCT_NAME=
 PRODUCT_URL=
 COMPANY_NAME=
 COMPANY_ADDRESS=
+
+# Intempt
+INTEMPT_USERNAME=
+INTEMPT_PASSWORD=
+INTEMPT_API_HOST=
+INTEMPT_ORG_NAME=
+INTEMPT_PROJECT_NAME=
+INTEMPT_SOURCE_ID=
