Intempt campaign API integration

--- a/server/.env.example
+++ b/server/.env.example
@@ -47,3 +47,7 @@ INTEMPT_API_HOST=
 INTEMPT_ORG_NAME=
 INTEMPT_PROJECT_NAME=
 INTEMPT_SOURCE_ID=
+
+# Intempt campaigns/experiences
+INTEMPT_UPGRADE_TO_PREMIUM_CAMPAIGN_ID=
+
