Intempt campaign experiences improvements

--- a/client/.env.example
+++ b/client/.env.example
@@ -16,3 +16,6 @@ NEXT_PUBLIC_STRIPE_PREMIUM_PLAN=
 NEXT_PUBLIC_STRIPE_PREMIUM_PLAN_PRICE=
 NEXT_PULBIC_STRIPE_PREMIUM_PLAN_TYPE=
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
+
+# Intempt campaigns/experiences
+NEXT_PUBLIC_INTEMPT_POPUPS_CAMPAIGN_ID=
