Project refactoring, Intempt event tracking improvement

--- a/client/.env.example
+++ b/client/.env.example
@@ -17,6 +17,12 @@ NEXT_PUBLIC_STRIPE_PREMIUM_PLAN_PRICE=
 NEXT_PULBIC_STRIPE_PREMIUM_PLAN_TYPE=
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
 
+# Intempt config
+NEXT_PUBLIC_INTEMPT_ORG_NAME=
+NEXT_PUBLIC_INTEMPT_PROJECT_NAME=
+NEXT_PUBLIC_INTEMPT_SOURCE_ID=
+NEXT_PUBLIC_INTEMPT_API_KEY=
+
 # Intempt campaigns/experiences
 NEXT_PUBLIC_INTEMPT_POPUPS_CAMPAIGN1_ID=
 NEXT_PUBLIC_INTEMPT_POPUPS_CAMPAIGN2_ID=
