Project refactoring, Intempt event tracking improvement

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,4 +3,8 @@ services:
   web:
     build: .
     ports:
-      - 80:80
+      - "80:80"
+    volumes:
+      - .:/app
+      - /app/node_modules
+
