--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 services:
+  pdb:
+    image: postgres
+    restart: unless-stopped
+    env_file: ./.env
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
+    ports:
+      - "5432:5432"
+    volumes:
+        - db:/var/lib/postgresql/data
   web:
+    depends_on:
+      - pdb
     build: .
     ports:
       - "80:80"
@@ -8,3 +22,5 @@ services:
       - .:/app
       - /app/node_modules
 
+volumes:
+  db:
