--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "antd": "^4.16.13",
-    "axios": "^0.21.4",
+    "axios": "^1.6.8",
     "dotenv": "^10.0.0",
     "firebase": "^8.3.0",
     "formik": "^2.2.6",
@@ -24,11 +24,11 @@
     "lodash": "^4.17.20",
     "lottie-react": "^2.1.0",
     "moment": "^2.29.1",
-    "next": "11.1.2",
+    "next": "^14.2.3",
     "qs": "^6.10.1",
-    "react": "^17.0.1",
+    "react": "^18",
     "react-countup": "^4.3.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18",
     "react-google-button": "^0.7.2",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
@@ -46,7 +46,7 @@
     "@testing-library/react": "^11.2.5",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
-    "cypress": "^6.9.1",
+    "cypress": "^13.8.1",
     "jest": "^26.6.3",
     "prettier": "2.2.1"
   }
