--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./server.js",
-    "test": "jest --detectOpenHandles --runInBand"
+    "test": "jest --detectOpenHandles --runInBand",
+    "watch": "nodemon ./server.js"
   },
   "dependencies": {
     "@casl/ability": "^5.4.3",
@@ -27,7 +28,6 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.1.25",
     "nodemailer": "^6.6.3",
-    "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "pino": "^8.18.0",
     "sib-api-v3-sdk": "^8.2.0",
@@ -47,6 +47,7 @@
     "@babel/preset-env": "^7.13.10",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "nodemon": "^3.1.0",
     "supertest": "^6.1.3"
   }
 }
